--- a/src/app/novo-projeto/novo-projeto.component.html
+++ b/src/app/novo-projeto/novo-projeto.component.html
@@ -1,27 +1,33 @@
 <h3>Novo Projeto</h3>
 <div style="width: 400px;">
-  <form>
+  <form [formGroup]="formProjeto" (ngSubmit)="onSalvar()">
+
     <div class="form-group">
       <label for="inNome">Nome</label>
-      <input type="text" class="form-control" id="inNome" name="inNome">
+      <input type="text" 
+      class="form-control"
+      formControlName="Nome"
+       id="inNome" 
+       name="inNome">
     </div>
 
     <div class="form-group">
       <label for="inOrientadores">Orientadores</label>
-      <input type="text" class="form-control" id="inOrientadores" name="inOrientadores">
+      <input type="text" class="form-control" formControlName="Orientadores" id="inOrientadores" name="inOrientadores">
     </div>
 
     <div class="form-group">
         <label for="inSala">Sala</label>
-        <input type="text" class="form-control" id="inSala" name="inSala">
+        <input type="text" class="form-control" formControlName="Sala" id="inSala" name="inSala">
     </div>
 
     <div class="form-group">
         <label for="inTurma">Turma</label>
-        <input type="text" class="form-control" id="inTurma" name="inTurma">
+        <input type="text" class="form-control" id="inTurma" formControlName="Turma" name="inTurma">
     </div>
       
     <button type="submit" class="btn btn-success">Salvar</button>
 
+    
   </form>
 </div>
